<resources>
    <string name="app_name">ChickenDinner</string>
    <string name="facebook_app_id">3178101242447413</string>
    <string name="facebook_token">eY7W_VVqC6QO5KLRTNKOA1png-g</string>
    <string name="bundle">com.kyriniy.dinnner</string>
    <string name="one_signal_id">7719da30-5272-4033-a349-4606c9d5f31a</string>
    <string name="apps_flyer_dev_key">xwBjuv6RCnRBWf3aEwskVj</string>
    <string name="start_game">Start Game</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="hello_user">Hello dear user!</string>
    <string name="rules">Rules of the game:</string>
    <string name="back">Back</string>
    <string name="level">Select difficulty level:</string>
    <string name="result">Your latest game results:</string>
    <string name="max_result">Game over!
        \nYour max result %1$s</string>
    <string name="level_description">Easy - 10 coins per try
        \nNormal - 25 coins per try
        \nDifficult - 50 coins per attempt</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="description">The game consists in collecting 2 or 3 identical values on the reel.
        \nFor each match you get points.\nFor 2 matches you get 50 points.\nFor 3 you get 100 points.
        \nAt the beginning of the game you are given 100 coins.\nThe cost of each attempt depends on the difficulty level.
        The default is 25 coins.\n<b>Good game!</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>